Add collection-gate runtime operations, authorizer SPI, and handler