@@ -3,6 +3,7 @@ package com.agentforge4j.starter.logging;
 
 import java.util.HashMap;
 import java.util.Map;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.MDC;
 
 /**
@@ -38,7 +39,7 @@ public final class RunMdcContext implements AutoCloseable {
     if (!previousValues.containsKey(key)) {
       previousValues.put(key, MDC.get(key));
     }
-    if (value == null || value.isBlank()) {
+    if (StringUtils.isBlank(value)) {
       MDC.remove(key);
       return;
     }
